--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="btn_fragment_save">Save</string>
+    <string name="btn_delete_desc">Delete task button</string>
+    <string name="btn_edit_desc">Edit task button</string>
 </resources>
