--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="btn_delete_desc">Delete task button</string>
     <string name="btn_edit_desc">Edit task button</string>
     <string name="edit_date">Date</string>
+    <string name="tab1">TODO Task</string>
+    <string name="tab2">Done Task</string>
+    <string name="settings_btn">Settings</string>
+    <string name="tab3">All Task</string>
 </resources>
