--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,6 @@
     <string name="btn_save">Save</string>
     <string name="description">Description</string>
     <string name="title">Title</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="btn_fragment_save">Save</string>
     <string name="btn_delete_desc">Delete task button</string>
@@ -21,4 +20,5 @@
     <string name="title_tasks">Task list</string>
     <string name="title_calendar">Calendar</string>
     <string name="edit_group">Edit groups info</string>
+    <string name="textview_groupname">Group Name</string>
 </resources>
